--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,3 @@
-
 - name: Setup database
   include_role:
     name: mariadb
@@ -39,14 +38,20 @@
   ignore_errors: yes
   become: yes
 
+- name: Remove mnemo config
+  file:
+    path: "/etc/horde/mnemo/conf.php"
+    state: absent
 
-- name: First Login credentials
-  blockinfile:
-    path: "/etc/horde/horde/conf.php"
-    marker: "/* {mark} ANSIBLE MANAGED BLOCK */"
-    insertafter: "$conf['auth']['admins'] = array('{{ horde_webmail_existing_email_to_admin }}');"
-    block: |
-      $conf['auth']['driver'] = 'auto';
-      $conf['auth']['params']['username'] = '{{ horde_admin_username }}';
-      $conf['auth']['params']['password'] = '{{ horde_admin_password }}';
+- name: Configurate horde
+  template:
+    src: "{{ item.src }}"
+    dest: "{{ item.dst }}"
+    group: "{{ item.group | default('www-data') }}"
+  loop: "{{ horde_templates_list }}"
+  notify: "restart all"
 
+- name: Activate rewrite
+  apache2_module:
+    name: rewrite
+    state: present
