--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: Wolfgang Hotwagner
+  author: Lenhard Reuter
   description: This role installs horde webmail.
   license: MIT
   min_ansible_version: 2.8
