--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,9 @@
+
+- name: restart apache2
+  service:
+    name: apache2
+    state: restarted
+
 - name: restart all
   service:
     name: "{{ item }}"
