--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,18 +24,7 @@
   expect:
   args:
     command: webmail-install
-    responses:
-      (.*)What database backend should we use?(.*): "{{ horde_webmail_db_backend }}"
-      (.*)Username to connect to the database as(.*): "{{ horde_webmail_user }}"
-      (.*)Password to connect with(.*): "{{ horde_webmail_pass }}"
-      (.*)How should we connect to the database?(.*): "{{ horde_webmail_db_connect }}"
-      (.*)Location of UNIX socket(.*): "{{ horde_webmail_unix_socket }}"
-      (.*)Database name to use(.*): "{{ horde_webmail_db_name }}"
-      (.*)Internally used charset(.*): "{{ horde_webmail_db_charset }}"
-      (.*)Use SSL to connect to the server?(.*): "{{ horde_webmail_ssl }}"
-      (.*)Split reads to a different server?(.*): "{{ horde_webmail_split_reads }}"
-      (.*)Should Horde log all queries.(.*): "{{ horde_webmail_log }}"
-      (.*)(optional)(.*): "{{ horde_webmail_existing_email_to_admin }}"
+    responses: "{{ horde_webinstall_responses }}"
     echo: yes
   register: expect_webmail_install_result
   failed_when: "expect_webmail_install_result.rc != 0 and 'Thank you for using Horde Groupware Webmail Edition!' not in expect_webmail_install_result.stdout"
