--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -83,6 +83,5 @@ horde_webinstall_responses:
     (.*)Should Horde log all queries.(.*): "{{ horde_webmail_log }}"
     (.*)(optional)(.*): "{{ horde_webmail_existing_email_to_admin }}"
 
-
-
-
+horde_sender_service: postfix
+horde_receiver_service: dovecot
