--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -47,6 +47,8 @@ horde_templates_list:
   - { src: prefs.php.j2, dst: /etc/horde/horde/prefs.local.php }
   - { src: backends.php.j2, dst: /etc/horde/imp/backends.local.php }
   - { src: conf.php.j2, dst: /etc/horde/horde/conf.local.php }
+  # needed as default deployment conf on debian is broken
+  - { src: mnemo.conf.j2, dst: /etc/horde/mnemo/conf.php }
   - { src: vhost.conf.j2, dst: "/etc/apache2/sites-available/webmail.conf" }
 
 horde_apache2modules:
