--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: Lenhard Reuter
   description: This role installs horde webmail.
-  license: MIT
+  license: GPL-3.0
   min_ansible_version: 2.8
   platforms:
     - name: Ubuntu
