--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,20 +1,20 @@
-# Horde install
+---
 horde_vhost_server_name: "localhost"
-horde_webmail_reverse_proxy: no
+horde_webmail_reverse_proxy: false
 horde_admin_users:
   - admin
 horde_log_path: "/var/log/horde"
-horde_php_version: 7.2
+horde_php_version: "{% if ansible_distribution_version == '20.04' %}7.4{% else %}7.2{% endif %}"
 horde_apt_packages:
-   - php{{ horde_php_version }}
-   - php{{ horde_php_version }}-mysql
-   - php-horde-webmail
-   - php-horde-lz4
-   - libjs-excanvas
-   - libimage-exiftool-perl
-   - python-pip
+  - php{{ horde_php_version }}
+  - php{{ horde_php_version }}-mysql
+  - php-horde-webmail
+  - php-horde-lz4
+  - libjs-excanvas
+  - libimage-exiftool-perl
+  - python3-pip
 horde_pip_packages:
-   - pexpect
+  - pexpect
 
 # Database
 horde_db_user: "horde"
@@ -37,7 +37,7 @@ horde_webmail_db_charset: "utf-8"
 horde_webmail_ssl: "false"
 horde_webmail_split_reads: "false"
 horde_webmail_log: "0"
-horde_webmail_existing_email_to_admin: "{{ horde_admin_users[0] if horde_admin_users|length > 0 else '' }}"
+horde_webmail_existing_email_to_admin: "{{ horde_admin_users[0] if horde_admin_users | length > 0 else '' }}"
 
 horde_webmail_webmaster_email: "webmaster@{{ horde_mail_domain }}"
 horde_webmail_webmaster_domain: "{{ horde_mail_domain }}"
@@ -74,17 +74,17 @@ horde_automate_sender_address: "true"
 # horde webinstall dialog expect responses
 # the below responses work for horde version 5.2.22
 horde_webinstall_responses:
-    (.*)What database backend should we use?(.*): "{{ horde_webmail_db_backend }}"
-    (.*)Username to connect to the database as(.*): "{{ horde_webmail_user }}"
-    (.*)Password to connect with(.*): "{{ horde_webmail_pass }}"
-    (.*)How should we connect to the database?(.*): "{{ horde_webmail_db_connect }}"
-    (.*)Location of UNIX socket(.*): "{{ horde_webmail_unix_socket }}"
-    (.*)Database name to use(.*): "{{ horde_webmail_db_name }}"
-    (.*)Internally used charset(.*): "{{ horde_webmail_db_charset }}"
-    (.*)Use SSL to connect to the server?(.*): "{{ horde_webmail_ssl }}"
-    (.*)Split reads to a different server?(.*): "{{ horde_webmail_split_reads }}"
-    (.*)Should Horde log all queries.(.*): "{{ horde_webmail_log }}"
-    (.*)(optional)(.*): "{{ horde_webmail_existing_email_to_admin }}"
+  (.*)What database backend should we use?(.*): "{{ horde_webmail_db_backend }}"
+  (.*)Username to connect to the database as(.*): "{{ horde_webmail_user }}"
+  (.*)Password to connect with(.*): "{{ horde_webmail_pass }}"
+  (.*)How should we connect to the database?(.*): "{{ horde_webmail_db_connect }}"
+  (.*)Location of UNIX socket(.*): "{{ horde_webmail_unix_socket }}"
+  (.*)Database name to use(.*): "{{ horde_webmail_db_name }}"
+  (.*)Internally used charset(.*): "{{ horde_webmail_db_charset }}"
+  (.*)Use SSL to connect to the server?(.*): "{{ horde_webmail_ssl }}"
+  (.*)Split reads to a different server?(.*): "{{ horde_webmail_split_reads }}"
+  (.*)Should Horde log all queries.(.*): "{{ horde_webmail_log }}"
+  (.*)(optional)(.*): "{{ horde_webmail_existing_email_to_admin }}"
 
 horde_sender_service: postfix
 horde_receiver_service: dovecot
