--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,17 +6,13 @@
     mariadb_databases:
       - name: "{{ horde_db_name }}"
     mariadb_users:
-      - {
-        name: "{{ horde_db_user }}",
-        password: "{{ horde_db_pass }}",
-        privileges: "{{ horde_db_name }}.*:ALL,GRANT"
-      }
+      - { name: "{{ horde_db_user }}", password: "{{ horde_db_pass }}", privileges: "{{ horde_db_name }}.*:ALL,GRANT" }
 
 - name: Gather os specific variables
   ansible.builtin.include_vars: "{{ item }}"
   with_first_found:
     - "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
-    - "default.yml"
+    - default.yml
 
 - name: Install required apt packages
   ansible.builtin.package:
@@ -25,7 +21,7 @@
 
 - name: Install Horde via pear
   ansible.builtin.include_tasks: pear.yml
-  when: "ansible_distribution_version != '18.04'"
+  when: ansible_distribution_version != '18.04'
 
 - name: Install required pip packages
   ansible.builtin.pip:
@@ -38,7 +34,7 @@
     responses: "{{ horde_webinstall_responses }}"
     echo: true
   register: expect_webmail_install_result
-  failed_when: "expect_webmail_install_result.rc != 0 and 'Thank you for using Horde Groupware Webmail Edition!' not in expect_webmail_install_result.stdout"
+  failed_when: expect_webmail_install_result.rc != 0 and 'Thank you for using Horde Groupware Webmail Edition!' not in expect_webmail_install_result.stdout
   become: true
 
 - name: Configure Horde and Apache
